# rg-cs

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
data/: samples.json
data/bad/: edge_case_ambiguous_resume.txt
data/good/: happy_path_fullstack_resume.txt  job_description.md
src/: Dockerfile  pyproject.toml
src/agent-runtime/: agent_tasks.py  pyproject.toml  worker.py
src/backend/: Dockerfile  pyproject.toml
src/backend/app/: __init__.py  main.py
src/backend/app/api/: deps.py
src/backend/app/api/routes/: cv.py  cv_matching.py  health.py  orchestration.py  recruitment.py  samples.py  settings.py  workspace.py
src/backend/app/core/: config.py
src/backend/app/services/: file_parser.py  orchestration_progress_service.py  pii_redaction_service.py  qdrant_service.py  sample_data_service.py  task_queue.py  upload_service.py  workspace_service.py
src/backend/app/workers/: celery_app.py  tasks.py
src/backend/tests/: conftest.py  test_candidate_analysis_api.py  test_celery.py  test_config_defaults.py  test_crewai_run_limiter.py  test_cv_extraction.py  test_cv_extraction_guardrails.py  test_cv_flow.py  test_cv_flow_limits.py  test_cv_flow_pii.py  test_cv_matching.py  test_deepeval.py  test_health.py  test_orchestration_runs_api.py  test_phoenix.py  test_pii_redaction_service.py  test_recruitment_api.py  test_resume_validation_deepeval.py  test_run_logger.py  test_samples_api.py  test_settings_api.py  test_workspace_service.py
src/frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
(+31 files in other folders)
