[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autorecruit-backend"
version = "0.1.0"
description = "FastAPI backend and Celery worker for AutoRecruit."
requires-python = ">=3.12,<3.14"
dependencies = [
  "arize-phoenix-otel",
  "celery[redis]>=5.4.0",
  "crewai>=1.12.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "openinference-instrumentation-crewai",
  "openinference-instrumentation-openai",
  "opentelemetry-exporter-otlp>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "presidio-analyzer>=2.2.360",
  "presidio-anonymizer>=2.2.360",
  "pydantic-settings>=2.6.1",
  "pypdf>=5.1.0",
  "python-multipart>=0.0.12",
  "python-docx>=1.1.2",
  "qdrant-client>=1.12.1",
  "uvicorn>=0.32.0"
]

[dependency-groups]
dev = [
  "pytest>=8.3.3"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
